--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=8000
+MONGO_DB_URI=mongodb+srv://tiendat107001:JPNKjoSEqL5Mfn9X@cluster0.69apvt3.mongodb.net/Chat-app?retryWrites=true&w=majority
