backend: generate JWT token

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=8000
 MONGO_DB_URI=mongodb+srv://tiendat107001:JPNKjoSEqL5Mfn9X@cluster0.69apvt3.mongodb.net/Chat-app?retryWrites=true&w=majority
+JWT_SECRET=irBfrbNZpQWww6iO2KxI0+4tgptNxBiJAeNybnoYpj0=
+NODE_ENV=development
+```
