--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mailgen": "^2.0.28",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.12",
     "otp-generator": "^4.0.1",
     "socket.io": "^4.7.4",
